--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 kotlin.code.style=official
+#plugin management
+kotlinJvmVersion=1.6.10
+kotlinJvmTarget=11
+kotlinSpringVersion=1.6.10
+tbdCompilerArgs=-Xjsr305=strict
