--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ kotlin.code.style=official
 kotlinJvmVersion=1.6.10
 kotlinJvmTarget=11
 kotlinSpringVersion=1.6.10
+azureKustoDataVersion=3.0.0
 tbdCompilerArgs=-Xjsr305=strict
